--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -74,7 +74,7 @@
 
         <!-- Display photo.owner_id start -->
         <td>
-          <%= photo.owner_id %>
+          <%= photo.owner.email %>
         </td>
         <!-- Display photo.owner_id end -->
 
